--- a/css/style.css
+++ b/css/style.css
@@ -54,7 +54,7 @@ header{
  }
 
  .main-flex{
-    margin-top: 60px;
+    margin-top: 20px;
     padding: 10%;
     display: flex;
     align-items: center;
@@ -67,6 +67,11 @@ header{
     align-items: center;
     padding: 10%;
     flex-direction: column;
+ }
+
+ .back-img{
+   padding: 10px;
+   background-image: url("../img/stars.svg");
  }
 
  .button-scarica{
